# robinson

./: CMakeLists.txt  README.md
data/: input.txt  input2.txt  input_not_robinson.txt  matteo.txt  matteo2.txt  matteo3.txt
src/: main.cpp  matrix.cpp  matrix.h  permute.cpp  sfs.cpp  sfs.h
